--- a/TimeGallery/server/src/main/resources/application.yml
+++ b/TimeGallery/server/src/main/resources/application.yml
@@ -7,7 +7,9 @@ spring:
     url: jdbc:mysql:///timegallery?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: 20200401
+    initialization-mode: always
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
 
