--- a/TimeGallery/frontend-vue/package.json
+++ b/TimeGallery/frontend-vue/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.4.1",
+    "bootstrap-vue": "^2.4.2",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
@@ -44,9 +44,11 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
+    },
+    "rules": {
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
