change to jwt auth

--- a/TimeGallery/server/src/main/resources/application.yml
+++ b/TimeGallery/server/src/main/resources/application.yml
@@ -16,3 +16,8 @@ spring:
 logging:
   file:
     name: log/timegallery.log
+
+timegallery:
+  jwt:
+    secret: timegallerySecretKey
+    expiration-ms: 86400000
