--- a/TimeGallery/front-end/package.json
+++ b/TimeGallery/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap-vue": "^2.6.1",
     "core-js": "^3.6.4",
     "qs": "^6.9.1",
